# FruitNinja

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
OpenCV/: readme.md  webcam_explorer.py
fruitninja/: colour_detection.py  grid_mover.py  gui.py  gui_sim.py  gui_ur3e.py  movement.py  planning_scene.py
launch/: Movie.py  fruitninja.launch.py
urdf/: ur3e_workcell.urdf.xacro
