<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fruitninja</name>
  <version>0.0.1</version>
  <description>FruitNinja - UR3e fruit cutting robot</description>
  <maintainer email="dinesh@todo.com">dinesh</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>ur_robot_driver</exec_depend>
  <exec_depend>ur_moveit_config</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
